<resources>
    <string name="app_name">Projet-kotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenu">Content De Te Revoir</string>
    <string name="seconnecter">Veuillez Se Connecter SVP  </string>
    <string name="or"> Ou</string>
    <string name="register">Pas De Compte ???? </string>
    <string name="menu_home"> Courses</string>
    <string name="menu_gallery"> My Currency</string>
    <string name="menu_slideshow"> My Countries</string>
    <string name="menu_position"> My Position</string>
    <string name="menu_call"> Make a call</string>
    <string name="menu_profile">Settings</string>
    <string name="menu_logout"> Logout</string>
    <string name="menu_photos">Gallerie</string>
    <string name="menu_vedio">Vedio</string>
    <string name="phone">50122449</string>
    <string name="choiced_city">Ville sélectionnée :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>