<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kotlin_formation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.kotlin_formation.ui.currency.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_currency" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.kotlin_formation.ui.countries.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_countries" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.kotlin_formation.ui.maps.MapsFragment"
        android:label="@string/menu_position"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_call"
        android:name="com.example.kotlin_formation.ui.Call.CallFragment"
        android:label="@string/menu_call"
        tools:layout="@layout/fragment_call" />
    <fragment
        android:id="@+id/nav_photos"
        android:name="com.example.kotlin_formation.ui.photo.photoFragment"
        android:label="@string/menu_photos"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.kotlin_formation.ui.video.VideoFragment"
        android:label="@string/menu_vedio"
        tools:layout="@layout/fragment_video" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.kotlin_formation.ui.profil.ProfilFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profil" />
</navigation>