<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_picture_as_pdf_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_euro_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_find_replace_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/baseline_place_24"
            android:title="@string/menu_position" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/baseline_add_ic_call_24"
            android:title="@string/menu_call" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/baseline_camera_enhance_24"
            android:title="Gallerie"/>
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/baseline_missed_video_call_24"
            android:title="Video"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_settings_24"
            android:title="My Profil"/>
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="Logout"/>
        </menu>
    </item>
</menu>